--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="item"
-            type="com.example.diffutilrv.EmployeeListItem" />
+            type="com.example.diffutilrv.employee.presentation.EmployeeListItem" />
     </data>
 
     <LinearLayout
