EmployeeCheckbox - add `select`, remove `click`

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -27,4 +27,9 @@
         android:padding="10dp"
         android:textSize="18sp" />
 
+    <CheckBox
+        android:id="@+id/employee_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
