--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,10 @@
     <data>
 
         <variable
+            name="viewModel"
+            type="com.example.diffutilrv.MainViewModel" />
+
+        <variable
             name="employee"
             type="com.example.diffutilrv.Employee" />
 
@@ -12,7 +16,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical"
+        android:onClick="@{(v) -> viewModel.onClickRow(employee)}">
 
         <TextView
             android:id="@+id/employee_name"
@@ -25,11 +34,19 @@
 
         <TextView
             android:id="@+id/employee_role"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="10dp"
             android:text="@{employee.role}"
             android:textSize="18sp"
             tools:text="@tools:sample/lorem/random" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{(v) -> viewModel.onClickRowButton(employee)}"
+            android:text="@string/item_button" />
     </LinearLayout>
 </layout>
